@@ -1,0 +1,39 @@
+/*
+ * Copyright 2011-2016 Jerome Pasquier
+ *
+ * This file is part of rainbrurpg-client.
+ *
+ * rainbrurpg-client is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * rainbrurpg-client is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with rainbrurpg-client.  If not, see <http://www.gnu.org/licenses/>.
+ *
+ */
+
+#ifndef _STATE_MANAGER_HPP_
+#define _STATE_MANAGER_HPP_
+
+// Forward declarations
+class GameState;
+// End of forward declarations
+
+class StateManager
+{
+public:
+  StateManager();
+  ~StateManager();
+
+protected:
+  GameState* mCurrentState;
+
+};
+
+#endif // _STATE_MANAGER_HPP_
